# nexus-agent-os

./: .gitignore  README.md  memory.json  pyproject.toml
events/: f42a86a5-5ffb-477b-8cc9-c19a23171a34.jsonl  unknown.jsonl
nexus_os/api/: main.py
nexus_os/core/: agent_state.py  nexus_agent.py
nexus_os/core/agents/orchestrator/: agent.py  executor.py  lifecycle.py  persistence.py  state.py
nexus_os/core/contracts/: agent.py  memory.py  tool.py
nexus_os/core/graph/: execution_graph.py
nexus_os/core/graph/nodes/: analyst.py  base.py  executor.py  fallback.py  llm.py  planner.py  recall.py  reviewer.py  tool.py
nexus_os/core/graph/policies/: retry.py  routing.py
nexus_os/core/memory/: memory_store.py  vector_store.py
nexus_os/core/metrics/: builder.py
nexus_os/core/observability/: event_bus.py  event_store.py  log_sink.py  tracer.py
nexus_os/core/runtime/: dead_letter_queue.py  queue_gate.py  redis_dead_letter_queue.py  redis_queue_gate.py  supervisor.py
nexus_os/core/security/: agent_policy.py  capabilities.py  guarded.py  sandbox.py
nexus_os/core/telemetry/: telemetry.py
nexus_os/core/timeline/: builder.py
nexus_os/infra/: config.py  health.py  logging.py  runtime.py
