[project]
name = "aiproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Hugo Ramos",email = "victorhramos.ti@outlook.com"}
]
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pydantic (>=2.11.9,<2.13)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langgraph (>=1.1.10,<2.0.0)",
    "langchain (>=1.2.17,<2.0.0)",
    "crewai (>=1.14.4,<2.0.0)",
    "sentence-transformers (>=5.4.1,<6.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "redis (>=7.4.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
